# mcp-gateway-mcp

./: .gitignore  .mcp.json  AGENTS.md  Makefile  README.md  pyproject.toml  sample-prompts.md  server.py
tools/: gateway_health_ui.py  gateway_status.py  registration_ui.py  registrations.py  tool_catalog.py  virtual_servers.py  virtual_servers_ui.py
