[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-gateway-admin"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "kubernetes>=29.0.0",
    "requests>=2.31.0",
    "fastmcp[apps]>=3.4.4",
]

[project.scripts]
mcp-gateway-admin = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py", "tools/"]
